# YangGuiBee.github.io

./: .gitignore  AI Study.html  CLAUDE.md  about.md  appsscript.js  config.js  contact.css  contact.html  contact.js  courses.css  courses.html  deploy.ps1  faq.html  faq.js  index.html  main.js  nav.js  news.css  news.html  news.js  notice.html  notice.js  resources.css  resources.html  resources.js  style.css
AI Governance/: AI거버넌스_논문관리.html  (+2 more)
VHLookup-main/: .gitignore  README.md  build_exe.bat  install_desktop_deps.bat  pyproject.toml  run_app.bat  run_cli_examples.bat  run_demo.bat  실행안내.md
VHLookup-main/docs/: sample_catalog.md  security_review_brief.md  thread_launch_playbook.md  threads_content_pack.md  update_notes_2026-07-04.md
VHLookup-main/samples/public_admin/: README.md
VHLookup-main/scripts/: run_public_admin_demo.py
VHLookup-main/src/vhlookup_app/: __init__.py  main.py  tk_main.py
VHLookup-main/src/vhlookup_cli/: __init__.py  main.py
VHLookup-main/src/vhlookup_core/: __init__.py  admin_tools.py  auto.py  consolidation.py  excel_comments.py  header.py  horizontal.py  inspection.py  inspection_report.py  keys.py  loader.py  mapper.py  merge.py  models.py  normalization.py  privacy.py  privacy_masking.py  reconciliation.py  report.py  settings.py  sheet.py  template_catalog.py  templates.py  validation.py  version.py  workbook_diff.py
VHLookup-main/tests/: test_admin_tools.py  test_cli.py  test_consolidation_horizontal_report.py  test_header.py  test_mapper_merge.py  test_privacy_masking.py  test_public_admin_workflows.py  test_workbook_diff.py
(+29 files in other folders)
