[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vhlookup"
version = "1.1.0"
description = "Local-only Excel matching, lookup, consolidation, and horizontal-table conversion tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
desktop = [
  "PySide6>=6.6",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
vhlookup = "vhlookup_cli.main:main"
vhlookup-cli = "vhlookup_cli.main:main"
vhlookup-app = "vhlookup_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--basetemp=C:/tmp/vhlookup_pytest_tmp"
pythonpath = ["src"]
testpaths = ["tests"]
